[gd_scene load_steps=3 format=3 uid="uid://derauyvhx78ov"]

[ext_resource type="Script" path="res://scenes/base/connector/connector.gd" id="1"]

[sub_resource type="CircleShape2D" id="1"]
radius = 24.0

[node name="Connector" type="Area2D"]
collision_layer = 0
collision_mask = 0
script = ExtResource("1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("1")
debug_color = Color(0.878431, 0.215686, 0.658824, 0.419608)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
